--- a/BuildingJava17WithMaven.yaml
+++ b/BuildingJava17WithMaven.yaml
@@ -1,4 +1,4 @@
-name: Building Java 17 with Maven
+name: Building Java 17 and verifying with Maven,Clamscan and Trivy
 
 on:
   worflow_call:
@@ -31,3 +31,37 @@ jobs:
       with:
         name: target-folder
         path: ./target
+Clamscan:
+
+    runs-on: ubuntu-latest
+    needs: Buildando-jar
+    steps:
+    - name: Download target folder from build
+      uses: actions/download-artifact@v4
+      with:
+        name: target-folder
+        path: ./target
+    - name: Instalando clamav para verificação do .jar
+      run: |
+        echo "Iniciando download"
+        sudo apt-get install clamav -y
+        sudo systemctl stop clamav-freshclam.service
+    - name: Executando verificação
+      run: |
+        sudo freshclam
+        echo "Iniciando verificação"
+        ls -l target/
+        clamscan target/
+  trivy-scan:
+    runs-on: ubuntu-latest
+    needs: Clamscan
+    container:
+      image: aquasec/trivy:latest
+    steps:
+      - name: Download target folder from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: target-folder
+          path: ./target
+      - name: Scan JAR with Trivy
+        run: trivy fs ./target/demo-0.0.1-SNAPSHOT.jar --severity CRITICAL
