--- a/.github/workflows/BuildingJava17WithMaven.yml
+++ b/.github/workflows/BuildingJava17WithMaven.yml
@@ -1,13 +1,13 @@
 name: Building Java 17 and verifying with Maven,Clamscan and Trivy
 
 on:
-  worflow_call:
+  workflow_call:
     inputs:
-    image_name:
-      required: true
-      type: string
-    tag:
-      type: string
+      image_name:
+        required: true
+        type: string
+      tag:
+        type: string
 
 jobs:
   Buildando-jar:
@@ -52,7 +52,7 @@ Clamscan:
         echo "Iniciando verificação"
         ls -l target/
         clamscan target/
-  trivy-scan:
+trivy-scan:
     runs-on: ubuntu-latest
     needs: Clamscan
     container:
