--- a/.github/workflows/BuildingJava17WithMaven.yml
+++ b/.github/workflows/BuildingJava17WithMaven.yml
@@ -1,4 +1,4 @@
-name: Building Java 17 and verifying with Maven,Clamscan and Trivy
+name: Building Java 17 and verifying with Maven, Clamscan and Trivy
 
 on:
   workflow_call:
@@ -8,12 +8,11 @@ on:
         type: string
       tag:
         type: string
+        default: 'latest'
 
 jobs:
   Buildando-jar:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 17
@@ -25,33 +24,36 @@ jobs:
     - name: Buildando com Maven
       run: |
         echo "Iniciando build..."
-        mvn -B package --file pom.xml
+        mvn -B package -DskipTests --file pom.xml
     - name: Subindo jar
       uses: actions/upload-artifact@v4
       with:
-        name: target-folder
+        name: target-folder-${{ inputs.image_name }}-${{ inputs.tag }}
         path: ./target
-  Clamscan:
+        retention-days: 1
 
+  Clamscan:
     runs-on: ubuntu-latest
     needs: Buildando-jar
     steps:
     - name: Download target folder from build
       uses: actions/download-artifact@v4
       with:
-        name: target-folder
+        pattern: target-folder-${{ inputs.image_name }}*
         path: ./target
     - name: Instalando clamav para verificação do .jar
       run: |
-        echo "Iniciando download"
-        sudo apt-get install clamav -y
-        sudo systemctl stop clamav-freshclam.service
-    - name: Executando verificação
+        sudo apt-get update
+        sudo apt-get install -y clamav clamav-daemon
+        sudo systemctl stop clamav-freshclam.service || true
+        sudo freshclam --quiet
+    - name: Executando verificação ClamAV
       run: |
-        sudo freshclam
-        echo "Iniciando verificação"
-        ls -l target/
-        clamscan target/
+        echo "Verificando arquivos em target/"
+        ls -la target/
+        echo "Executando ClamAV scan..."
+        clamscan --infected --recursive ./target/ || true
+
   trivy-scan:
     runs-on: ubuntu-latest
     needs: Clamscan
@@ -61,7 +63,17 @@ jobs:
       - name: Download target folder from build job
         uses: actions/download-artifact@v4
         with:
-          name: target-folder
+          pattern: target-folder-${{ inputs.image_name }}*
           path: ./target
+      - name: Listando arquivos para scan
+        run: ls -la ./target/
       - name: Scan JAR with Trivy
-        run: trivy fs ./target/demo-0.0.1-SNAPSHOT.jar --severity CRITICAL
+        run: |
+          JAR_FILE=$(find ./target -name "*.jar" | head -1)
+          if [ -n "$JAR_FILE" ]; then
+            echo "Scanning $JAR_FILE"
+            trivy fs "$JAR_FILE" --severity CRITICAL,HIGH --exit-code 1 --no-progress
+          else
+            echo "No JAR file found in target/"
+            exit 1
+          fi
